--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,14 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Main$PlaceholderFragment">
-    <Button
-        android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<ScrollView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#CCC">
+    <LinearLayout
+        android:id="@+id/linear_main"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_section1"/>
-</RelativeLayout>
+        android:background="#CCC">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="2dp"
+            android:text="@string/title_section1"
+            android:textSize="25sp"
+            android:background="@layout/bg_card"
+            android:gravity="center"
+            android:alpha="0.9"/>
+
+        <include layout="@layout/full_row"/>
+        <include layout="@layout/full_row"/>
+        <include layout="@layout/full_row"/>
+        <include layout="@layout/full_row"/>
+        <include layout="@layout/full_row"/>
+        <include layout="@layout/full_row"/>
+
+    </LinearLayout>
+</ScrollView>
+</FrameLayout>
