--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -3,10 +3,15 @@
     android:id="@+id/gridview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnWidth="125dp"
+    android:columnWidth="130dp"
+    android:minHeight="@dimen/activity_horizontal_margin"
+    android:minWidth="@dimen/activity_vertical_margin"
     android:numColumns="auto_fit"
     android:verticalSpacing="10dp"
     android:horizontalSpacing="10dp"
     android:stretchMode="columnWidth"
     android:gravity="center"
-    />
+    android:padding="10dp"
+    android:background="#CCC">
+
+</GridView>
