--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,7 +21,7 @@
             android:layout_marginBottom="2dp"
             android:text="@string/title_section1"
             android:textSize="25sp"
-            android:background="@layout/bg_card"
+            android:background="@drawable/bg_card"
             android:gravity="center"
             android:alpha="0.9"/>
 
