--- a/app/src/main/res/drawable-xxhdpi/bg_card.xml
+++ b/app/src/main/res/drawable-xxhdpi/bg_card.xml
@@ -1,17 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- ovo je samo osnovni izgled kartice-->
+<?xml version="1.0" encoding="utf-8"?><!-- ovo je samo osnovni izgled kartice-->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_height="wrap_content" android:layout_width="wrap_content">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="3dp"/>
+            <corners android:radius="3dp" />
             <solid android:color="#CCC" />
         </shape>
     </item>
     <item android:bottom="2dp">
         <shape android:shape="rectangle">
-            <corners android:radius="3dp"/>
+            <stroke
+                android:width="1dp"
+                android:color="#CCC" />
+            <corners android:radius="3dp" />
             <solid android:color="#FFF" />
         </shape>
     </item>
