--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -3,15 +3,15 @@
     android:id="@+id/gridview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     android:columnWidth="130dp"
+    android:gravity="center"
+    android:horizontalSpacing="10dp"
     android:minHeight="@dimen/activity_horizontal_margin"
     android:minWidth="@dimen/activity_vertical_margin"
     android:numColumns="auto_fit"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
     android:padding="10dp"
-    android:background="#CCC">
+    android:stretchMode="columnWidth"
+    android:verticalSpacing="10dp">
 
 </GridView>
