--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -1,12 +1,61 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<?xml version="1.0" encoding="utf-8"?>
 
-    <Button
-        android:id="@+id/button1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFF">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="270dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/bg_card">
+
+            <ImageView
+                android:id="@+id/full_card_img_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="266dp"
+                android:adjustViewBounds="true"
+                android:clickable="true"
+                android:contentDescription="@string/app_name"
+                android:longClickable="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/dracula_tmb"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginStart="1dp"/>
+
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="264dp"
+                android:layout_margin="4dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="266dp"
+                android:textSize="15sp"
+                android:text="@string/synopsis"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginBottom="2dp"/>
+            </ScrollView>
+        </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_section5" />
+        android:orientation="horizontal"
+        android:background="@drawable/bg_card"
+        android:layout_margin="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rating: "
+            android:textSize="25sp"
+            android:gravity="start"/>
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
