--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,37 +1,44 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ScrollView
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#CCC">
-    <LinearLayout
-        android:id="@+id/linear_main"
-        android:orientation="vertical"
+
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:background="#CCC">
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/linear_main"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="2dp"
-            android:text="@string/title_section1"
-            android:textSize="25sp"
-            android:background="@drawable/bg_card"
-            android:gravity="center"
-            android:alpha="0.9"/>
+            android:background="#CCC"
+            android:orientation="vertical">
 
-        <include layout="@layout/full_row"/>
-        <include layout="@layout/full_row"/>
-        <include layout="@layout/full_row"/>
-        <include layout="@layout/full_row"/>
-        <include layout="@layout/full_row"/>
-        <include layout="@layout/full_row"/>
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="5dp"
+                android:alpha="0.9"
+                android:background="@drawable/bg_card"
+                android:gravity="center"
+                android:text="@string/title_section1"
+                android:textSize="25sp" />
 
-    </LinearLayout>
-</ScrollView>
+            <include layout="@layout/full_row" />
+
+            <include layout="@layout/full_row" />
+
+            <include layout="@layout/full_row" />
+
+            <include layout="@layout/full_row" />
+
+            <include layout="@layout/full_row" />
+
+            <include layout="@layout/full_row" />
+
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
