--- a/app/src/main/res/layout/layout_detail.xml
+++ b/app/src/main/res/layout/layout_detail.xml
@@ -1,57 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF">
+    android:background="#FFF"
+    android:orientation="vertical">
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="275dp"
         android:layout_margin="5dp"
         android:background="@drawable/bg_card">
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="268dp"
-        >
-        <ImageView
-            android:id="@+id/full_card_img_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="266dp"
-            android:adjustViewBounds="true"
-            android:clickable="true"
-            android:contentDescription="@string/app_name"
-            android:longClickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/dracula_tmb"
-            android:layout_margin="5dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="268dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/full_card_img_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="266dp"
+                android:layout_margin="5dp"
+                android:adjustViewBounds="true"
+                android:clickable="true"
+                android:contentDescription="@string/app_name"
+                android:longClickable="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/dracula_tmb" />
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="270dp"
-                android:textSize="15sp"
-                android:text="@string/synopsis"/>
+                android:text="@string/synopsis"
+                android:textSize="15sp" />
         </LinearLayout>
     </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_margin="5dp"
         android:background="@drawable/bg_card"
-        android:layout_margin="5dp">
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="start"
             android:text="Rating: "
-            android:textSize="25sp"
-            android:gravity="start"/>
+            android:textSize="25sp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="end"
             android:text="50%"
-            android:textSize="25sp"
-            android:gravity="end"/>
-        </LinearLayout>
+            android:textSize="25sp" />
+    </LinearLayout>
 
 </LinearLayout>
