--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<GridView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gridview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF"
+    android:background="@drawable/gridview_background2"
+
     android:columnWidth="130dp"
     android:gravity="center"
     android:horizontalSpacing="10dp"
