--- a/app/src/main/res/layout/full_card.xml
+++ b/app/src/main/res/layout/full_card.xml
@@ -11,8 +11,7 @@
     android:layout_weight="1"
     android:background="@drawable/bg_card"
     android:orientation="vertical"
-    android:paddingBottom="2dp"
-    android:paddingRight="0dp">
+    android:paddingBottom="2dp">
 
     <ImageView
         android:id="@+id/full_card_img"
@@ -23,6 +22,7 @@
         android:layout_marginBottom="1dp"
         android:layout_marginLeft="1dp"
 
+
         android:layout_marginRight="1dp"
         android:adjustViewBounds="true"
         android:clickable="true"
@@ -32,6 +32,7 @@
         android:src="@drawable/dracula_tmb" />
 
     <TextView
+
         android:id="@+id/full_card_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,10 +40,10 @@
         android:layout_margin="1dp"
         android:background="@drawable/black_opacity_75"
         android:gravity="center"
-        android:text="@string/title_section1"
+        android:contentDescription="movie_title"
+        android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-
-        android:textSize="25sp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
