--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,12 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Main">
     <item
-        android:id="@+id/action_example"
-        android:showAsAction="withText|ifRoom"
-        android:title="@string/action_example" />
+        android:id="@+id/action_refresh"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_refresh"
+        android:icon="@drawable/ic_action_refresh"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings" />
+    <item
+        android:id="@+id/action_exit"
+        android:orderInCategory="200"
+        android:showAsAction="never"
+        android:title="@string/action_exit"/>
+
 </menu>
