--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -7,6 +7,9 @@
     android:layout_height="match_parent"
     android:background="@drawable/gridview_background2"
 
+    android:clickable="true"
+    android:longClickable="true"
+
     android:columnWidth="130dp"
     android:gravity="center"
     android:horizontalSpacing="10dp"
