--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF"
+    android:background="@drawable/gridview_background2">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/detail_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Movie Title"
+        android:textSize="35sp"
+        android:background="@drawable/bg_card"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="270dp"
@@ -32,13 +46,12 @@
 
         <ScrollView
             android:layout_width="wrap_content"
-            android:layout_height="264dp"
+            android:layout_height="match_parent"
             android:layout_margin="4dp">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="266dp"
-                android:layout_gravity="center_vertical|end"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:text="@string/synopsis"
                 android:textColor="@android:color/black"
@@ -47,6 +60,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/detail_layout_runtime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -57,8 +71,66 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:text="Rating: "
+            android:text="Runtime: "
+            android:editable="false"
+            android:textSize="25sp" />
+        <TextView
+            android:id="@+id/detail_runtime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="runtimeEditable"
             android:textSize="25sp" />
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/detail_layout_year"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/bg_card"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="Year: "
+            android:textSize="25sp" />
+        <TextView
+            android:id="@+id/detail_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="yearEditable"
+            android:textSize="25sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/detail_layout_cast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/bg_card"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="Cast: "
+            android:textSize="25sp" />
+        <TextView
+            android:id="@+id/detail_cast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:text="castEditable "
+            android:textSize="25sp" />
+    </LinearLayout>
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            </GridLayout>
 
 </LinearLayout>
+</ScrollView>
