--- a/app/src/main/res/layout/full_card.xml
+++ b/app/src/main/res/layout/full_card.xml
@@ -4,6 +4,7 @@
     android:id="@+id/full_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:layout_marginBottom="2dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
@@ -21,8 +22,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="1dp"
         android:layout_marginLeft="1dp"
-
-
         android:layout_marginRight="1dp"
         android:adjustViewBounds="true"
         android:clickable="true"
