Minor changes, Added a simple Toast for onClickEvent in the GridView

--- a/app/src/main/res/layout/full_card.xml
+++ b/app/src/main/res/layout/full_card.xml
@@ -25,6 +25,7 @@
         android:layout_marginRight="1dp"
         android:adjustViewBounds="true"
         android:clickable="true"
+        android:focusable="true"
         android:contentDescription="@string/app_name"
         android:longClickable="true"
         android:scaleType="fitXY"
