--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,7 +5,8 @@
         android:id="@+id/action_refresh"
         android:showAsAction="ifRoom"
         android:title="@string/action_refresh"
-        android:icon="@drawable/ic_action_refresh"/>
+        android:icon="@drawable/ic_action_refresh"
+        android:onClick="onNavigationDrawerItemSelected"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
