--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -1,22 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<GridView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gridview"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/gridview_background2"
-    android:clickable="true"
-    android:longClickable="true"
-    android:columnWidth="130dp"
-    android:gravity="center"
-    android:horizontalSpacing="10dp"
-    android:minHeight="@dimen/activity_horizontal_margin"
-    android:minWidth="@dimen/activity_vertical_margin"
-    android:numColumns="auto_fit"
-    android:padding="10dp"
-    android:stretchMode="columnWidth"
-    android:verticalSpacing="10dp">
-
-
-</GridView>
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/boxoffice_list"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/bg_card">
+</ListView>
