--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="25sp" />
     <Button
+        android:id="@+id/home_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_section0"
@@ -34,6 +35,7 @@
         android:src="@drawable/launcher_no_text"
         android:layout_gravity="center"/>
     <Button
+        android:id="@+id/home_share_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Share"
