--- a/app/src/main/res/drawable-xxhdpi/bg_card.xml
+++ b/app/src/main/res/drawable-xxhdpi/bg_card.xml
@@ -5,17 +5,18 @@
     android:layout_height="wrap_content">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="3dp" />
-            <solid android:color="#CCC" />
+            <corners android:radius="2dp"/>
+            <solid android:color="#d2d2d2" />
         </shape>
     </item>
     <item android:bottom="2dp">
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="#CCC" />
+                android:color="#d2d2d2" />
             <corners android:radius="3dp" />
             <solid android:color="#FFF" />
         </shape>
     </item>
+
 </layer-list>
