--- a/app/src/main/res/drawable-xxhdpi/selector.xml
+++ b/app/src/main/res/drawable-xxhdpi/selector.xml
@@ -2,4 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/normal" android:state_pressed="false" />
     <item android:drawable="@drawable/normal" android:state_activated="true" />
+    <item android:drawable="@drawable/normal" android:state_focused="true"/>
 </selector>
