--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -6,31 +6,66 @@
     android:layout_height="match_parent"
     android:id="@+id/fragment_list_item"
     android:padding="5dp"
-    android:background="#CCC">
+    android:background="#f1f1f1">
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="160dp"
     android:orientation="horizontal"
     android:background="@drawable/bg_card">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:id="@+id/fragment_list_item_img"
+        android:layout_width="106dp"
+        android:layout_height="match_parent"
+        android:scaleType="fitStart"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="1dp"
         android:src="@drawable/buck"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <TextView
+                android:id="@+id/fragment_list_item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Naslov"/>
+                android:text="Title"/>
+            <TextView
+                android:id="@+id/fragment_list_item_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" (Year)"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/fragment_list_item_runtime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Runtime: "/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Year"/>
-
-        </LinearLayout>
+            android:text="Release date: "/>
+        <TextView
+            android:id="@+id/fragment_list_item_actors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Actors: "/>
     </LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="156dp"
+        android:layout_marginTop="1dp"
+        android:src="@drawable/drawer_shadow"
+        android:scaleType="fitXY"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragment_list_item_actors"
+        android:text="@string/app_name"/>
+</LinearLayout>
 </LinearLayout>
