--- a/app/src/main/res/layout/fragment_others.xml
+++ b/app/src/main/res/layout/fragment_others.xml
@@ -5,18 +5,17 @@
     android:id="@+id/gridview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gridview_background2"
+    android:background="#f1f1f1"
     android:clickable="true"
     android:longClickable="true"
     android:columnWidth="130dp"
     android:gravity="center"
-    android:horizontalSpacing="10dp"
     android:minHeight="@dimen/activity_horizontal_margin"
     android:minWidth="@dimen/activity_vertical_margin"
     android:numColumns="auto_fit"
-    android:padding="10dp"
+    android:padding="4dp"
     android:stretchMode="columnWidth"
-    android:verticalSpacing="10dp">
-
+    android:verticalSpacing="3dp"
+    android:horizontalSpacing="5dp">
 
 </GridView>
