--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gridview_background">
+    android:background="#399322"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="35sp"
+        android:layout_marginTop="10sp"
+        android:background="@drawable/drawer_shadow2"
         android:gravity="center"
-        android:layout_marginTop="10sp"/>
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:textSize="35sp" />
+
     <Space
         android:layout_width="fill_parent"
         android:layout_height="25sp" />
+
     <Button
         android:id="@+id/home_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/title_section0"
-        android:layout_gravity="center"/>
+        android:textColor="@android:color/white" />
 
     <Space
         android:layout_width="fill_parent"
         android:layout_height="25sp" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/launcher_no_text"
-        android:layout_gravity="center"/>
     <Button
         android:id="@+id/home_share_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="Share"
-        android:layout_gravity="center"/>
+        android:textColor="@android:color/white" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scaleType="fitEnd"
+        android:src="@drawable/ic_launcher_1100" />
+
 
 </LinearLayout>
