--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -1,71 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/fragment_list_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_list_item"
-    android:padding="5dp"
-    android:background="#f1f1f1">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:orientation="horizontal"
-    android:background="@drawable/bg_card">
-    <ImageView
-        android:id="@+id/fragment_list_item_img"
-        android:layout_width="106dp"
-        android:layout_height="match_parent"
-        android:scaleType="fitStart"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="1dp"
-        android:src="@drawable/buck"/>
+    android:background="#f1f1f1"
+    android:orientation="vertical"
+    android:padding="5dp">
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp">
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:background="@drawable/bg_card"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/fragment_list_item_img"
+            android:layout_width="106dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="1dp"
+            android:scaleType="fitStart"
+            android:src="@drawable/buck" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/fragment_list_item_title"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:orientation="vertical">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/fragment_list_item_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Title" />
+
+                <TextView
+                    android:id="@+id/fragment_list_item_year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" (Year)" />
+            </LinearLayout>
+
             <TextView
-                android:id="@+id/fragment_list_item_year"
+                android:id="@+id/fragment_list_item_runtime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" (Year)"/>
+                android:text="Runtime: " />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Release date: " />
+
+            <TextView
+                android:id="@+id/fragment_list_item_actors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Actors: " />
         </LinearLayout>
-        <TextView
-            android:id="@+id/fragment_list_item_runtime"
+
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Runtime: "/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Release date: "/>
+            android:layout_height="156dp"
+            android:layout_marginTop="1dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/drawer_shadow" />
+
         <TextView
             android:id="@+id/fragment_list_item_actors"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Actors: "/>
+            android:text="@string/app_name" />
     </LinearLayout>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="156dp"
-        android:layout_marginTop="1dp"
-        android:src="@drawable/drawer_shadow"
-        android:scaleType="fitXY"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragment_list_item_actors"
-        android:text="@string/app_name"/>
-</LinearLayout>
 </LinearLayout>
