--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -4,11 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gridview_background"
-
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
     android:duplicateParentState="true"
-    android:drawSelectorOnTop="true"
-    tools:context=".NavigationDrawerFragment" >
-    </ListView>
+    tools:context=".NavigationDrawerFragment"/>
