--- a/app/src/main/res/layout/fragment_others.xml
+++ b/app/src/main/res/layout/fragment_others.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<GridView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gridview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f1f1f1"
     android:clickable="true"
-    android:longClickable="true"
     android:columnWidth="130dp"
     android:gravity="center"
+    android:horizontalSpacing="5dp"
+    android:longClickable="true"
     android:minHeight="@dimen/activity_horizontal_margin"
     android:minWidth="@dimen/activity_vertical_margin"
     android:numColumns="auto_fit"
     android:padding="4dp"
     android:stretchMode="columnWidth"
-    android:verticalSpacing="3dp"
-    android:horizontalSpacing="5dp">
+    android:verticalSpacing="3dp">
 
 </GridView>
