--- a/app/src/main/res/layout/full_card.xml
+++ b/app/src/main/res/layout/full_card.xml
@@ -4,13 +4,13 @@
     android:id="@+id/full_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
     android:layout_marginBottom="2dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="2dp"
     android:layout_weight="1"
     android:background="@drawable/bg_card"
+    android:clickable="true"
     android:orientation="vertical"
     android:paddingBottom="2dp">
 
@@ -22,11 +22,11 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="1dp"
         android:adjustViewBounds="true"
+        android:background="#f1f1f1"
         android:clickable="true"
         android:focusable="true"
         android:longClickable="true"
-        android:scaleType="fitXY"
-        android:background="#f1f1f1" />
+        android:scaleType="fitXY" />
 
     <TextView
 
@@ -36,8 +36,8 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="1dp"
         android:background="@drawable/black_opacity_75"
-        android:gravity="center"
         android:contentDescription="movie_title"
+        android:gravity="center"
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@android:color/white"
