--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,10 +3,9 @@
     tools:context=".Main">
     <item
         android:id="@+id/action_refresh"
-        android:showAsAction="ifRoom"
-        android:title="@string/action_refresh"
         android:icon="@drawable/ic_action_refresh"
-       />
+        android:showAsAction="ifRoom"
+        android:title="@string/action_refresh" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
@@ -16,6 +15,6 @@
         android:id="@+id/action_exit"
         android:orderInCategory="200"
         android:showAsAction="never"
-        android:title="@string/action_exit"/>
+        android:title="@string/action_exit" />
 
 </menu>
