--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#399322">
-
-    <TextView
-        android:id="@+id/splash_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/drawer_shadow2"
-        android:gravity="center_horizontal"
-        android:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:textSize="42sp" />
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/actionbar_background"
+    app:cardBackgroundColor="#399322"
+    android:id="@+id/splash_card_view">
 
     <TextView
         android:layout_width="match_parent"
@@ -22,8 +18,19 @@
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:text="@string/splash_subtitle"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp" />
+    <TextView
+        android:id="@+id/splash_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:textSize="42sp" />
+    </android.support.v7.widget.CardView>
+
 
     <ImageView
         android:id="@+id/imgLogo"
@@ -31,6 +38,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:scaleType="fitEnd"
-        android:src="@drawable/ic_launcher_1100" />
+        android:src="@drawable/actionbar_icon" />
 
 </RelativeLayout>
