--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/boxoffice_list"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/bg_card"></ListView>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    android:divider="@android:color/transparent"
+    android:layout_margin="5dp"
+    android:dividerHeight="0dp">
+    </ListView>
