--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,25 +20,14 @@
         android:layout_width="fill_parent"
         android:layout_height="25sp" />
 
-    <Button
-        android:id="@+id/home_button"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="Welcome to Home screen\nThe navigation menu is on the left"
+        android:textColor="@android:color/white"
         android:layout_gravity="center"
-        android:text="@string/title_section0"
-        android:textColor="@android:color/white" />
-
-    <Space
-        android:layout_width="fill_parent"
-        android:layout_height="25sp" />
-
-    <Button
-        android:id="@+id/home_share_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Share"
-        android:textColor="@android:color/white" />
+        android:gravity="center"/>
 
     <ImageView
         android:layout_width="match_parent"
