--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_list_item"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f1f1f1"
-    android:orientation="vertical"
-    android:padding="5dp">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/fragment_list_item"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:background="@drawable/bg_card"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.menil.rottenmovies.RemoteImageView
             android:id="@+id/fragment_list_item_img"
             android:layout_width="106dp"
             android:layout_height="match_parent"
@@ -39,12 +33,14 @@
                     android:id="@+id/fragment_list_item_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/pale_black"
                     android:text="Title" />
 
                 <TextView
                     android:id="@+id/fragment_list_item_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/pale_black"
                     android:text=" (Year)" />
             </LinearLayout>
 
@@ -52,17 +48,20 @@
                 android:id="@+id/fragment_list_item_runtime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/pale_black"
                 android:text="Runtime: " />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/pale_black"
                 android:text="Release date: " />
 
             <TextView
-                android:id="@+id/fragment_list_item_actors"
+                android:id="@+id/fragment_list_item_actors2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/pale_black"
                 android:text="Actors: " />
         </LinearLayout>
 
@@ -77,6 +76,6 @@
             android:id="@+id/fragment_list_item_actors"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/pale_black"
             android:text="@string/app_name" />
     </LinearLayout>
-</LinearLayout>
