--- a/app/src/main/res/layout/fragment_others.xml
+++ b/app/src/main/res/layout/fragment_others.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f1f1f1"
+    android:textColor="@color/pale_black"
     android:clickable="true"
     android:columnWidth="130dp"
     android:gravity="center"
