--- a/app/src/main/res/layout/full_card_2.xml
+++ b/app/src/main/res/layout/full_card_2.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    card_view:cardElevation="4dp">
+    card_view:cardElevation="3dp">
 
     <LinearLayout
-
         android:id="@+id/full_card_2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,7 +33,7 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:text="@string/app_name"
-            android:textColor="@android:color/black"
+            android:textColor="@color/pale_black"
             android:textSize="18sp" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
