--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/boxoffice_list"
@@ -9,3 +12,15 @@
     android:divider="@android:color/transparent"
     android:layout_margin="5dp"
     android:dividerHeight="0dp"/>
+
+<com.melnykov.fab.FloatingActionButton
+    android:id="@+id/boxoffice_list_fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom|end"
+    android:layout_margin="16dp"
+    android:src="@drawable/ic_add_white_24dp"
+    fab:fab_colorNormal="@color/green"
+    fab:fab_colorPressed="@color/light_gray"
+    fab:fab_colorRipple="@color/green_700" />
+</FrameLayout>
