--- a/app/src/main/res/layout/fragment_list_item2.xml
+++ b/app/src/main/res/layout/fragment_list_item2.xml
@@ -1,79 +1,130 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:minHeight="158dp"
     android:minWidth="100dp"
     android:layout_height="match_parent">
-<android.support.v7.widget.CardView
-    android:id="@+id/card_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    card_view:cardElevation="3dp"
-    card_view:cardCornerRadius="2dp"
-    android:layout_margin="5dp">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_list_item"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        card_view:cardElevation="3dp"
+        card_view:cardCornerRadius="2dp"
+        android:layout_margin="5dp">
 
-        <com.menil.rottenmovies.RemoteImageView
-            android:id="@+id/fragment_list_item_img"
-            android:layout_width="wrap_content"
-            android:minWidth="100dp"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/fragment_list_item"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="158dp"
-            android:layout_marginBottom="0dp"
-            android:layout_marginTop="1dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/empty_img" />
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_gravity="start"
-        android:orientation="vertical">
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/fragment_list_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/pale_black"
-            android:textStyle="bold|italic"
-            android:text="POSITION. TITLE (YEAR)" />
+            <com.menil.rottenmovies.RemoteImageView
+                android:id="@+id/fragment_list_item_img"
+                android:layout_width="wrap_content"
+                android:minWidth="100dp"
+                android:layout_height="wrap_content"
+                android:minHeight="158dp"
+                android:layout_marginBottom="0dp"
+                android:layout_marginTop="1dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/empty_img" />
 
-        <TextView
-            android:id="@+id/fragment_list_item_runtime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/pale_gray"
-            android:text="RUNTIME: " />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/fragment_list_item_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/pale_gray"
-            android:text="RELEASE DATE: " />
-    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_gravity="start"
+                    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_action_navigation_more_vert"
-        android:layout_gravity="end"
-        android:layout_alignParentRight="true"/>
-    </RelativeLayout>
+                    <TextView
+                        android:id="@+id/fragment_list_item_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold|italic"
+                        android:text="POSITION. TITLE (YEAR)" />
 
-    </LinearLayout>
+                    <TextView
+                        android:id="@+id/fragment_list_item_runtime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/pale_black"
+                        android:text="RUNTIME: " />
 
-</android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/fragment_list_item_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/pale_gray"
+                        android:text="RELEASE DATE: " />
+
+                    <TextView
+                        android:id="@+id/fragment_list_item_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/pale_gray"
+                        android:text="Critics Score: " />
+
+                </LinearLayout>
+                <View
+                    android:id="@+id/pr_bar_bot"
+                    android:layout_width="200dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="start"
+                    android:visibility="visible"
+                    android:background="@drawable/critics_score_bar"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginBottom="1dp"/>
+                <View
+                    android:id="@+id/pr_bar_top"
+                    android:layout_width="200dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="start"
+                    android:visibility="visible"
+                    android:background="@android:color/white"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginBottom="1dp"/>
+            <!--    <View
+                    android:id="@+id/pr_bar_mid"
+                    android:layout_width="50dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="start"
+                    android:visibility="visible"
+                    android:background="#FFFF00"
+                    android:layout_toRightOf="@id/pr_bar_bot"
+                    android:layout_alignParentBottom="true"/>
+                <View
+                    android:id="@+id/pr_bar_top"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="start"
+                    android:visibility="visible"
+                    android:background="#00FF00"
+                    android:layout_toRightOf="@id/pr_bar_mid"
+                    android:layout_alignParentBottom="true"
+                    />-->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_action_navigation_more_vert"
+                    android:layout_gravity="end"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"/>
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -81,6 +132,7 @@
         android:gravity="end"
         android:layout_margin="2dp"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:paddingBottom="15dp"
         android:orientation="vertical">
@@ -90,20 +142,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end">
+
             <ImageView
                 android:id="@+id/fragment_list_item_rtn_link"
                 android:layout_width="wrap_content"
                 android:maxHeight="40dp"
                 android:adjustViewBounds="true"
                 android:layout_height="wrap_content"
-                android:src="@drawable/rtlogo_small"/>
+                android:src="@drawable/rtlogo_small" />
 
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            >
+            android:layout_gravity="end">
 
             <ImageView
                 android:id="@+id/fragment_list_item_imdb_link"
