--- a/app/src/main/res/layout/full_card_2.xml
+++ b/app/src/main/res/layout/full_card_2.xml
@@ -27,7 +27,7 @@
     android:id="@+id/full_card_under"
     android:layout_below="@id/full_card_img"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="30dp"
     android:layout_gravity="center"
     android:orientation="horizontal">
 
@@ -36,6 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="#f1f1f1"/>
