Added transparent overlay ActionBar and managed to download higher res pictures with Thumbr.io

--- a/app/src/main/res/layout/fragment_others.xml
+++ b/app/src/main/res/layout/fragment_others.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="?android:attr/actionBarSize">
 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gridview"
     android:layout_width="match_parent"
@@ -19,3 +24,14 @@
     android:verticalSpacing="3dp">
 
 </GridView>
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/others_gridview_list_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_action_up"
+        fab:fab_colorNormal="@color/green"
+        fab:fab_colorPressed="@color/green_900"
+        fab:fab_colorRipple="@color/green_700" />
+</FrameLayout>
