--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,8 +22,10 @@
 
     <!-- ActionBar styles -->
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@drawable/actionbar_background</item>
+       <item name="android:background">@drawable/actionbar_background</item>
         <item name="android:icon">@drawable/actionbar_icon</item>
+        <item name="android:windowActionBarOverlay">true</item>
+<!-- <item name="android:background">@drawable/actionbar_background</item>-->
     </style>
 
 </resources>
