--- a/app/src/main/res/layout/fragment_boxoffice.xml
+++ b/app/src/main/res/layout/fragment_boxoffice.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="?android:attr/actionBarSize">
 <ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/boxoffice_list"
@@ -19,8 +21,8 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|end"
     android:layout_margin="16dp"
-    android:src="@drawable/ic_add_white_24dp"
+    android:src="@drawable/ic_action_up"
     fab:fab_colorNormal="@color/green"
-    fab:fab_colorPressed="@color/light_gray"
+    fab:fab_colorPressed="@color/green_900"
     fab:fab_colorRipple="@color/green_700" />
 </FrameLayout>
