--- a/app/src/main/res/drawable-xxhdpi/critics_score_bar.xml
+++ b/app/src/main/res/drawable-xxhdpi/critics_score_bar.xml
@@ -2,13 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient
-                android:angle="0"
-                android:startColor="#FF00FF00"
-                android:centerColor="#FFFFFF00"
-                android:endColor="#FFFF0000"
-                android:type="linear"
-                />
+            <gradient android:angle="0" android:centerColor="#FFFFFF00" android:endColor="#FFFF0000" android:startColor="#FF00FF00" android:type="linear" />
         </shape>
     </item>
 </selector>
