--- a/app/src/main/res/drawable-xxhdpi/spinner.xml
+++ b/app/src/main/res/drawable-xxhdpi/spinner.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="ring"
     android:innerRadiusRatio="3"
+    android:shape="ring"
     android:thicknessRatio="10"
     android:useLevel="false">
-    <size android:width="50dip" android:height="50dip" />
-    <gradient android:type="sweep" android:useLevel="false" android:startColor="#30399322" android:centerColor="#50399322" android:endColor="#ff399322"/>
+    <size
+        android:width="50dip"
+        android:height="50dip" />
+    <gradient
+        android:centerColor="#50399322"
+        android:endColor="#ff399322"
+        android:startColor="#30399322"
+        android:type="sweep"
+        android:useLevel="false" />
 </shape>
