--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,31 +5,33 @@
     android:layout_height="match_parent"
     android:background="#399322"
     android:paddingTop="?android:attr/actionBarSize">
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/actionbar_background"
-    app:cardBackgroundColor="#399322"
-    android:id="@+id/splash_card_view">
 
-    <TextView
+    <android.support.v7.widget.CardView
+        android:id="@+id/splash_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/splash_title"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:text="@string/splash_subtitle"
-        android:textColor="@android:color/background_light"
-        android:textSize="18sp" />
-    <TextView
-        android:id="@+id/splash_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:textSize="42sp" />
+        android:background="@drawable/actionbar_background"
+        app:cardBackgroundColor="#399322">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/splash_title"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:text="@string/splash_subtitle"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/splash_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:text="@string/app_name"
+            android:textColor="@android:color/white"
+            android:textSize="42sp" />
     </android.support.v7.widget.CardView>
 
 
