--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -3,8 +3,8 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="2dp"
-    android:background="#f1f1f1">
+    android:background="#f1f1f1"
+    android:padding="2dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,134 +17,134 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/fragment_details_title"
-                android:drawableBottom="#399322"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:gravity="center"
-                android:text="@string/movie_title_placeholder"
-                android:maxWidth="230dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/pale_black"
-                android:textSize="25sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <com.menil.rottenmovies.RemoteImageView
-                    android:id="@+id/fragment_details_img"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/fragment_details_title"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY"
-                    android:padding="5dp"
-                    android:src="@drawable/empty_img"/>
+                    android:drawableBottom="#399322"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:maxWidth="230dp"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:text="@string/movie_title_placeholder"
+                    android:textColor="@color/pale_black"
+                    android:textSize="25sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/fragment_details_runtime"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:text="@string/runtime_placeholder"
-                        android:textColor="@color/pale_black"
-                        android:textSize="18sp"/>
-
-                    <TextView
-                        android:id="@+id/fragment_details_rating"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:text="@string/rating_placeholder"
-                        android:textColor="@color/pale_gray"
-                        android:textSize="16sp"/>
-
-                    <TextView
-                        android:text="@string/cast_placeholder"
-                        android:id="@+id/fragment_details_cast"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="start"
-                        android:textColor="@color/pale_gray"
-                        android:textSize="15sp"/>
-                </LinearLayout>
-
-            </LinearLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/fragment_details_card_synopsis"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_below="@+id/fragment_details_fab">
-
-                <TextView
-                    android:id="@+id/fragment_details_synopsis"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:gravity="fill_horizontal"
-                    android:paddingTop="7dp"
-                    android:paddingRight="10dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingStart="10dp"
-                    android:paddingLeft="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="10"
-                    android:text="@string/synopsis"
-                    android:textColor="@color/pale_black"
-                    android:textSize="15sp" />
-
-        </android.support.v7.widget.CardView>
-            <!--        <android.support.v7.widget.CardView
-                        android:id="@+id/fragment_details_expand_card"
+                    <com.menil.rottenmovies.RemoteImageView
+                        android:id="@+id/fragment_details_img"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginRight="-6dp"
-                        android:layout_marginEnd="-6dp">
+                        android:adjustViewBounds="true"
+                        android:padding="5dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/empty_img" />
 
-                        <ImageView
-                            android:id="@+id/fragment_details_expand"
-                            android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="5dp">
+
+                        <TextView
+                            android:id="@+id/fragment_details_runtime"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:minHeight="30dp"
-                            android:minWidth="30dp"
-                            android:src="@drawable/ic_action_expand"/>
-            </android.support.v7.widget.CardView>-->
+                            android:gravity="start"
+                            android:text="@string/runtime_placeholder"
+                            android:textColor="@color/pale_black"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/fragment_details_rating"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="start"
+                            android:text="@string/rating_placeholder"
+                            android:textColor="@color/pale_gray"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/fragment_details_cast"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="start"
+                            android:text="@string/cast_placeholder"
+                            android:textColor="@color/pale_gray"
+                            android:textSize="15sp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/fragment_details_card_synopsis"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/fragment_details_fab">
+
+            <TextView
+                android:id="@+id/fragment_details_synopsis"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:ellipsize="end"
+                android:gravity="fill_horizontal"
+                android:maxLines="10"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="7dp"
+                android:text="@string/synopsis"
+                android:textColor="@color/pale_black"
+                android:textSize="15sp" />
+
+        </android.support.v7.widget.CardView>
+        <!--        <android.support.v7.widget.CardView
+                    android:id="@+id/fragment_details_expand_card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginRight="-6dp"
+                    android:layout_marginEnd="-6dp">
+
+                    <ImageView
+                        android:id="@+id/fragment_details_expand"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minHeight="30dp"
+                        android:minWidth="30dp"
+                        android:src="@drawable/ic_action_expand"/>
+        </android.support.v7.widget.CardView>-->
 
         <com.melnykov.fab.FloatingActionButton
             android:id="@+id/fragment_details_fab"
 
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/fragment_details_card_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/fragment_details_card_title"
+            android:layout_marginBottom="-30dp"
+            android:layout_marginTop="-42dp"
             android:src="@drawable/ic_add_white_24dp"
             fab:fab_colorNormal="@color/green"
-            fab:fab_colorPressed="@color/light_gray"
-            android:layout_marginTop="-42dp"
-            android:layout_marginBottom="-30dp"
-            />
+            fab:fab_colorPressed="@color/light_gray" />
 
     </RelativeLayout>
 
