--- a/app/src/main/res/layout/fragment_list_item2.xml
+++ b/app/src/main/res/layout/fragment_list_item2.xml
@@ -1,36 +1,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:ripple="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:minHeight="158dp"
-    android:minWidth="100dp"
-    android:layout_height="match_parent">
+    android:minWidth="100dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        card_view:cardElevation="3dp"
+        android:layout_margin="5dp"
         card_view:cardCornerRadius="2dp"
-        android:layout_margin="5dp">
+        card_view:cardElevation="3dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/fragment_list_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
+            <com.andexert.library.RippleView
+                android:id="@+id/fragment_list_item_ripple_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                ripple:rv_centered="true"
+                app:rv_color="@android:color/holo_green_dark">
             <com.menil.rottenmovies.RemoteImageView
                 android:id="@+id/fragment_list_item_img"
                 android:layout_width="wrap_content"
-                android:minWidth="100dp"
                 android:layout_height="wrap_content"
-                android:minHeight="158dp"
                 android:layout_marginBottom="0dp"
-                android:layout_marginTop="1dp"
+                android:layout_marginTop="0.5dp"
+                android:minHeight="158dp"
+                android:minWidth="100dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/empty_img" />
-
+            </com.andexert.library.RippleView>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -38,38 +45,39 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     android:layout_gravity="start"
+                    android:layout_margin="5dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/fragment_list_item_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingBottom="14dp"
+                        android:text="POSITION. TITLE (YEAR)"
                         android:textColor="@android:color/black"
-                        android:textStyle="bold|italic"
-                        android:text="POSITION. TITLE (YEAR)" />
+                        android:textStyle="bold|italic" />
 
                     <TextView
                         android:id="@+id/fragment_list_item_runtime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/pale_black"
-                        android:text="RUNTIME: " />
+                        android:text="RUNTIME: "
+                        android:textColor="@color/pale_black" />
 
                     <TextView
                         android:id="@+id/fragment_list_item_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/pale_gray"
-                        android:text="RELEASE DATE: " />
+                        android:text="RELEASE DATE: "
+                        android:textColor="@color/pale_gray" />
 
                     <TextView
                         android:id="@+id/fragment_list_item_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/pale_gray"
-                        android:text="Critics Score: " />
+                        android:text="Critics Score: "
+                        android:textColor="@color/pale_gray" />
 
                 </LinearLayout>
                 <!--<View
@@ -83,43 +91,57 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_marginBottom="1dp"/>-->
-              <!--  <View
-                    android:id="@+id/pr_bar_top"
-                    android:layout_width="200dp"
-                    android:layout_height="10dp"
-                    android:layout_gravity="start"
-                    android:visibility="visible"
-                    android:background="@android:color/white"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginBottom="1dp"/>-->
-            <!--    <View
-                    android:id="@+id/pr_bar_mid"
-                    android:layout_width="50dp"
-                    android:layout_height="20dp"
-                    android:layout_gravity="start"
-                    android:visibility="visible"
-                    android:background="#FFFF00"
-                    android:layout_toRightOf="@id/pr_bar_bot"
-                    android:layout_alignParentBottom="true"/>
-                <View
-                    android:id="@+id/pr_bar_top"
-                    android:layout_width="50dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="start"
-                    android:visibility="visible"
-                    android:background="#00FF00"
-                    android:layout_toRightOf="@id/pr_bar_mid"
-                    android:layout_alignParentBottom="true"
-                    />-->
+                <!--  <View
+                      android:id="@+id/pr_bar_top"
+                      android:layout_width="200dp"
+                      android:layout_height="10dp"
+                      android:layout_gravity="start"
+                      android:visibility="visible"
+                      android:background="@android:color/white"
+                      android:layout_alignParentBottom="true"
+                      android:layout_alignParentStart="true"
+                      android:layout_alignParentLeft="true"
+                      android:layout_marginBottom="1dp"/>-->
+                <!--    <View
+                        android:id="@+id/pr_bar_mid"
+                        android:layout_width="50dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="start"
+                        android:visibility="visible"
+                        android:background="#FFFF00"
+                        android:layout_toRightOf="@id/pr_bar_bot"
+                        android:layout_alignParentBottom="true"/>
+                    <View
+                        android:id="@+id/pr_bar_top"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="start"
+                        android:visibility="visible"
+                        android:background="#00FF00"
+                        android:layout_toRightOf="@id/pr_bar_mid"
+                        android:layout_alignParentBottom="true"
+                        />-->
                 <ImageView
+                    android:id="@+id/fragment_list_more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_action_navigation_more_vert"
-                    android:layout_gravity="end"
+                    android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"/>
+                    android:layout_gravity="end"
+                    android:src="@drawable/ic_action_navigation_more_vert" />
+                <Button
+                    android:id="@+id/fragment_list_add_to_fav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/fragment_list_more"
+                    android:layout_toStartOf="@id/fragment_list_more"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginEnd="25dp"
+                    android:textSize="15sp"
+                    android:padding="6dp"
+                    android:text="@string/add_to_favourites"/>
             </RelativeLayout>
 
         </LinearLayout>
@@ -129,42 +151,53 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="end"
-        android:layout_margin="2dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:paddingBottom="15dp"
-        android:orientation="vertical">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="2dp"
+        android:gravity="end"
+        android:orientation="vertical"
+        android:paddingBottom="15dp">
 
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end">
-
-            <ImageView
-                android:id="@+id/fragment_list_item_rtn_link"
+            <com.andexert.library.RippleView
+                android:id="@+id/fragment_list_item_ripple_rtn"
                 android:layout_width="wrap_content"
-                android:maxHeight="40dp"
-                android:adjustViewBounds="true"
                 android:layout_height="wrap_content"
-                android:src="@drawable/rtlogo_small" />
-
+                ripple:rv_centered="true"
+                app:rv_color="@android:color/holo_red_dark">
+                <ImageView
+                    android:id="@+id/fragment_list_item_rtn_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="40dp"
+                    android:src="@drawable/rtlogo_small" />
+            </com.andexert.library.RippleView>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end">
-
-            <ImageView
-                android:id="@+id/fragment_list_item_imdb_link"
+            <com.andexert.library.RippleView
+                android:id="@+id/fragment_list_item_ripple_imdb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxHeight="40dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/imdb_small" />
+                ripple:rv_centered="true"
+                app:rv_color="@android:color/holo_purple">
+                <ImageView
+                    android:id="@+id/fragment_list_item_imdb_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="40dp"
+                    android:src="@drawable/imdb_small" />
+            </com.andexert.library.RippleView>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </RelativeLayout>
