--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,7 +1,5 @@
-<ListView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingTop="?android:attr/actionBarSize"
     android:id="@+id/navigation_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,5 +7,6 @@
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
     android:duplicateParentState="true"
+    android:paddingTop="?android:attr/actionBarSize"
     android:textColor="@color/pale_black"
-    tools:context=".NavigationDrawerFragment"/>
+    tools:context=".NavigationDrawerFragment" />
