--- a/app/src/main/res/layout/test_details.xml
+++ b/app/src/main/res/layout/test_details.xml
@@ -15,16 +15,18 @@
             android:id="@+id/fragment_details_img_top"
             android:layout_width="fill_parent"
             android:layout_height="180dp"
+            android:layout_alignParentTop="true"
             android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
             android:padding="0dp"
-            android:src="@drawable/image_ori2"
-            android:layout_alignParentTop="true"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/image_ori2" />
+
         <android.support.v7.widget.CardView
             android:id="@+id/fragment_details_card_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/fragment_details_img_top">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -39,30 +41,33 @@
                         android:id="@+id/fragment_details_img"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
-                        android:padding="5dp"
-                        android:layout_alignParentStart="true"
                         android:layout_alignParentLeft="true"
-                        android:src="@drawable/empty_img"/>
+                        android:layout_alignParentStart="true"
+                        android:adjustViewBounds="true"
+                        android:padding="5dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/empty_img" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:orientation="vertical"
                         android:layout_alignParentBottom="true"
+                        android:layout_toEndOf="@id/fragment_details_img"
                         android:layout_toRightOf="@id/fragment_details_img"
-                        android:layout_toEndOf="@id/fragment_details_img">
+                        android:orientation="vertical"
+                        android:padding="5dp">
+
                         <TextView
                             android:id="@+id/fragment_details_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/movie_title_placeholder"
                             android:ellipsize="end"
                             android:singleLine="true"
+                            android:text="@string/movie_title_placeholder"
+                            android:textStyle="bold|italic"
                             android:textColor="@color/pale_black"
                             android:textSize="20sp" />
+
                         <TextView
                             android:id="@+id/fragment_details_runtime"
                             android:layout_width="match_parent"
@@ -70,7 +75,7 @@
                             android:gravity="start"
                             android:text="@string/runtime_placeholder"
                             android:textColor="@color/pale_black"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:id="@+id/fragment_details_rating"
@@ -79,16 +84,16 @@
                             android:gravity="start"
                             android:text="@string/rating_placeholder"
                             android:textColor="@color/pale_gray"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp" />
 
                         <TextView
-                            android:text="@string/cast_placeholder"
                             android:id="@+id/fragment_details_cast"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="start"
+                            android:text="@string/cast_placeholder"
                             android:textColor="@color/pale_gray"
-                            android:textSize="15sp"/>
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                 </RelativeLayout>
@@ -105,15 +110,15 @@
                 android:id="@+id/fragment_details_synopsis"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:gravity="fill_horizontal"
-                android:paddingTop="7dp"
-                android:paddingRight="10dp"
-                android:paddingEnd="10dp"
-                android:paddingBottom="10dp"
-                android:paddingStart="10dp"
-                android:paddingLeft="10dp"
                 android:ellipsize="end"
+                android:gravity="fill_horizontal"
                 android:maxLines="10"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingStart="10dp"
+                android:paddingTop="7dp"
                 android:text="@string/synopsis"
                 android:textColor="@color/pale_black"
                 android:textSize="15sp" />
@@ -138,20 +143,18 @@
                         android:src="@drawable/ic_action_expand"/>
         </android.support.v7.widget.CardView>-->
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/fragment_details_fab"
-
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/fragment_details_card_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_white_24dp"
-            fab:fab_colorNormal="@color/green"
-            fab:fab_colorPressed="@color/light_gray"
-            android:layout_marginTop="-42dp"
-            android:layout_marginBottom="-30dp"
-            />
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/fragment_details_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/fragment_details_card_title"
+                android:layout_marginBottom="-30dp"
+                android:layout_marginTop="-42dp"
+                android:src="@drawable/ic_add_white_24dp"
+                fab:fab_colorNormal="@color/green"
+                fab:fab_colorPressed="@color/light_gray" />
 
     </RelativeLayout>
 
